--- a/web/src/sass/style.scss
+++ b/web/src/sass/style.scss
@@ -11,6 +11,12 @@
 @use './components/button';
 @use './components/about-intro';
 @use './components/studio-intro';
+@use './components/booking';
+@use './components/socials';
+@use './components/slider';
+@use './components/video-bg';
+@use './components/form';
+@use './components/subscription';
 
 // layout
 @use './layout/header';
