--- a/web/src/sass/base/_typography.scss
+++ b/web/src/sass/base/_typography.scss
@@ -99,7 +99,7 @@
       font-size: $l-text * 1.2;
 
       &>*:last-child{
-        margin-left: 2rem  * 3; 
+        margin-left: 2rem  * 2.5; 
       }
     }
   
@@ -144,6 +144,17 @@
       &>*:last-child{
         margin-left: 2rem  * 6; 
       }
+    }
+
+    &--top-shift{
+      &>*:last-child{
+        margin-left: 0;
+      }
+      
+      &>*:first-child{
+        margin-left: 3rem;
+      }
+  
     }
   }
 }
