--- a/web/src/sass/components/_about-intro.scss
+++ b/web/src/sass/components/_about-intro.scss
@@ -8,17 +8,17 @@
 
   @include breakpoints(mq-l) {
     grid-row-gap: 0;
-    grid-template-columns: calc(55% - 4rem) 45%;
+    grid-template-columns: calc(60% - 4rem) 40%;
     grid-column-gap: 4rem;
   }
 
   @media only screen and (min-width: 1768px) {
-    grid-template-columns: calc(55% - calc(4rem * 1.4)) 45%;
+    grid-template-columns: calc(60% - calc(4rem * 1.4)) 40%;
     grid-column-gap: calc(4rem * 1.4);
   }
 
   @include breakpoints(mq-4xl) {
-    grid-template-columns: calc(55% - calc(4rem * 1.5)) 45%;
+    grid-template-columns: calc(60% - calc(4rem * 1.5)) 40%;
     grid-column-gap: calc(4rem * 1.5);
   }
 
@@ -26,13 +26,12 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
-    max-height: 50rem;
+    object-position: 100% 100%;
   }
 
   &__left-box {
     @include breakpoints(mq-l) {
-      margin-top: 12rem;
+      align-self: flex-end;
     }
 
     .img-box {
@@ -48,13 +47,13 @@
         width: 100%;
         display: grid;
         grid-template-columns: repeat(15, 6.6%);
-        grid-template-rows: repeat(9, 4.5rem);
+        grid-template-rows: repeat(8, 4vmax);
   
         & > *:first-child {
           grid-column-start: 1;
           grid-column-end: 7;
           grid-row-start: 1;
-          grid-row-end: 7;
+          grid-row-end: 6;
         }
   
         & > *:last-child {
@@ -63,14 +62,16 @@
           grid-column-end: -1;
           grid-row-start: 3;
           grid-row-end: -1;
+       
         }
       }
   
       @media only screen and (min-width: 1768px) {
-        grid-template-rows: repeat(9, calc(4.5rem * 1.2));
+        grid-template-rows: repeat(9, 3vmax);
       }
+
       @include breakpoints(mq-4xl) {
-        grid-template-rows: repeat(9, calc(4.5rem * 1.3));
+        grid-template-rows: repeat(9, 4vmax);
       }
     }
   }
@@ -99,6 +100,17 @@
       @include breakpoints(mq-l) {
         display: block;
         margin-bottom: 4rem;
+        max-height: 50rem;
+        object-fit: cover;
+        object-position: top center;
+      }
+
+      @media only screen and (min-width: 1768px) {
+        max-height: 60rem;
+      }
+
+      @include breakpoints(mq-4xl) {
+        max-height: unset;
       }
     }
   }
