--- a/web/src/sass/components/_button.scss
+++ b/web/src/sass/components/_button.scss
@@ -5,21 +5,24 @@
   text-decoration: none;
   position: relative;
   background-color: transparent;
-  padding: 1rem 2rem;
+  padding: 1.2rem 3rem;
   font-size: $base-text;
   font-weight: 400;
   font-family: $font-body;
+  border: none;
+  outline: none;
+  cursor: pointer;
 
   @include breakpoints(mq-2xl) {
     font-size: $base-text * 1.2;
   }
   @include breakpoints(mq-3xl) {
     font-size: $base-text * 1.3;
-    padding: calc(1rem * 1.2) calc(2rem * 1.2);
+    padding: calc(1.2rem * 1.2) calc(3rem * 1.2);
   }
   @include breakpoints(mq-4xl) {
     font-size: $base-text * 1.4;
-    padding: calc(1rem * 1.3) calc(2rem * 1.3);
+    padding: calc(1.2rem * 1.3) calc(3rem * 1.3);
   }
 
   &::before {
@@ -27,7 +30,7 @@
     width: 100%;
     content: "";
     display: block;
-    padding: 1rem 2rem;
+    padding: 1.2rem 3rem;
     border-radius: 50%;
     border-width: 1px;
     border-style: solid;
@@ -35,6 +38,13 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) skewY(5deg);
+
+    @include breakpoints(mq-3xl) {
+      padding: calc(1.2rem * 1.2) calc(3rem * 1.2);
+    }
+    @include breakpoints(mq-4xl) {
+      padding: calc(1.2rem * 1.3) calc(3rem * 1.3);
+    }
 
     @include breakpoints(mq-3xl) {
       border-width: 2px;
