--- a/web/src/sass/components/_studio-intro.scss
+++ b/web/src/sass/components/_studio-intro.scss
@@ -1,90 +1,94 @@
-@use '../abstract/variable' as *;
-@use '../abstract/mixins' as *;
+@use "../abstract/variable" as *;
+@use "../abstract/mixins" as *;
+
+.studio-intro {
+  width: 100%;
+  display: grid;
+  grid-template-columns: calc(60% - 0.8rem) 40%;
+  grid-column-gap: 0.8rem;
+  grid-row-gap: 2rem;
+
+  @include breakpoints(mq-md) {
+    grid-template-columns: calc(60% - 1rem) 40%;
+    grid-column-gap: 1rem;
+  }
 
 
-.studio-intro{
-    width: 100%;
-   display: grid;
-   grid-template-columns: calc(60% - .8rem) 40%;
-   grid-column-gap: .8rem;
-   grid-row-gap: 2rem;
+  grid-template-areas:
+    "first first"
+    "second third"
+    "fourth fourth";
 
-   grid-template-areas: 
-   'first first'
-   'second third'
-   'fourth fourth';
-
-   &>*:first-child{
+  & > *:first-child {
     grid-area: first;
-   }
+  }
 
-   &>*:nth-child(2){
+  & > *:nth-child(2) {
     grid-area: second;
-   }
+  }
 
-   &>*:nth-child(3){
+  & > *:nth-child(3) {
     grid-area: third;
     display: grid;
-    grid-row-gap: .8rem;
+    grid-row-gap: 0.8rem;
 
-    &>*:last-child{
-        display: none;
+    & > *:last-child {
+      display: none;
     }
 
-    @include breakpoints(mq-l) {
-        &>*:last-child{
-            display: block;
-        }
-        grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 4rem;
-        grid-row-gap: 4rem;
+    @include breakpoints(mq-md) {
+      grid-row-gap: 1rem;
+    }
 
+
+    @include breakpoints(mq-l) {
+      & > *:last-child {
+        display: block;
+      }
+      grid-template-columns: repeat(2, 1fr);
+      grid-column-gap: 4rem;
+      grid-row-gap: 4rem;
     }
 
     @media only screen and (min-width: 1768px) {
-        grid-column-gap: calc(4.5rem * 1.2);
-      }
-      @include breakpoints(mq-4xl) {
-        grid-column-gap: calc(4.5rem * 1.3);
-      }
-
-   }
-
-   &>*:nth-child(4){
-    grid-area: fourth;
-   }
-
-   @include breakpoints(mq-sm) {
-    
-   }
-
-   @include breakpoints(mq-sm) {
-
-   }
-
-   @include breakpoints(mq-l) {
-    grid-template-columns: calc(55% - 4rem) 45%;
-    grid-column-gap: 4rem;
-    grid-template-areas: 
-    'first first'
-    'second third'
-    'second fourth';
-   }
-
-   @media only screen and (min-width: 1768px) {
-    grid-column-gap: calc(4.5rem * 1.2);
-  }
-  @include breakpoints(mq-4xl) {
-    grid-column-gap: calc(4.5rem * 1.3);
-  }
-
-    &__text-box{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        @include breakpoints(mq-l) {
-            align-items: flex-start;
-        }
+      grid-column-gap: calc(4rem * 1.4);
     }
+
+    @include breakpoints(mq-4xl) {
+      grid-column-gap: calc(4rem * 1.5);
+    }
+  }
+
+  & > *:nth-child(4) {
+    grid-area: fourth;
+  }
+
+  @include breakpoints(mq-l) {
+    grid-template-columns: calc(60% - 4rem) 40%;
+    grid-column-gap: 4rem;
+    grid-template-areas:
+      "first first"
+      "second third"
+      "second fourth";
+  }
+
+  @media only screen and (min-width: 1768px) {
+    grid-column-gap: calc(4rem * 1.4);
+    grid-template-columns: calc(60% - calc(4rem * 1.4)) 40%;
+  }
+
+  @include breakpoints(mq-4xl) {
+    grid-column-gap: calc(4rem * 1.5);
+    grid-template-columns: calc(60% - calc(4rem * 1.5)) 40%;
+  }
+
+  &__text-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include breakpoints(mq-l) {
+      align-items: flex-start;
+    }
+  }
 }
