--- a/web/src/sass/layout/_header.scss
+++ b/web/src/sass/layout/_header.scss
@@ -8,6 +8,14 @@
     width: 100%;
     position: relative;
     max-height: 64rem;
+
+    @media only screen and (min-width: 1768px) {
+      max-height: 64rem * 1.2;
+    }
+  
+    @include breakpoints(mq-4xl) {
+      max-height: 64rem * 1.3;
+    }
   }
 
   .landing {
