--- a/web/src/sass/layout/_nav.scss
+++ b/web/src/sass/layout/_nav.scss
@@ -74,6 +74,20 @@
       }
     }
 
+    &--dark{
+      .line{
+        &::after, &::before{
+          background: $primary;
+        }
+      }
+    }
+
+    &--isOpened {
+      .line::before, .line::after{
+        background: $neutral;
+      }
+    }
+
     // fix the hover state for only desktop and focus and active using class isOpened for only mobile
 
     &:hover .line::after,
@@ -100,6 +114,8 @@
     &--isOpened .line::before {
       transform: rotate(-45deg);
     }
+
+
   }
 
   &__links {
@@ -168,7 +184,15 @@
     border-bottom: 2px solid transparent;
 
     @include breakpoints(mq-3xl) {
-      font-size: $xl-text * 1.5;
+      font-size: $base-text * 1.5;
+    }
+
+    @media only screen and (min-width: 1768px) {
+      font-size: $base-text * 1.2;
+    }
+  
+    @include breakpoints(mq-4xl) {
+      font-size: $base-text * 1.3;
     }
 
     &--mobile {
