--- a/web/src/sass/layout/_section.scss
+++ b/web/src/sass/layout/_section.scss
@@ -4,12 +4,22 @@
 
 .section{
     width: 100%;
-    min-height: 100vh;
+    min-height: 60vh;
     padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-bottom: 3rem;
 
     @include breakpoints(mq-l) {
-        padding-top: 8rem;
-        padding-bottom: 8rem;
+        padding-top: 6rem;
+        padding-bottom: 4rem;
     }
+
+    @media only screen and (min-width: 1768px) {
+        padding-top: 6rem * 1.5;
+        padding-bottom: 4rem * 1.5;
+      }
+    
+      @include breakpoints(mq-4xl) {
+        padding-top: 6rem * 1.6;
+        padding-bottom: 4rem * 1.6;
+      }
 }
